k8s/uat/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: sd-copilot-service-uat
  namespace: sd-copilot
spec:
  selector:
    app: sd-copilot-uat
  ports:
    - name: http
      port: 80
      targetPort: 4000
  type: ClusterIP
